# fishgame

./: CMakeLists.txt
src/: main.cpp  resources.qrc
src/core/: Constants.h  GameEngine.cpp  GameEngine.h
src/entities/: Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Player.cpp  Player.h
src/scenes/: LevelManager.cpp  LevelManager.h  MainScene.cpp  MainScene.h
src/ui/: GameHud.cpp  GameHud.h  LevelInfoDialog.cpp  LevelInfoDialog.h  MainWindow.cpp  MainWindow.h  PauseDialog.cpp  PauseDialog.h  StartScreen.cpp  StartScreen.h
src/utils/: AudioManager.cpp  AudioManager.h
